Alignment fix for corporate policy

--- a/blocks/corporatepolicies/corporatepolicies.css
+++ b/blocks/corporatepolicies/corporatepolicies.css
@@ -66,7 +66,6 @@
     font-weight: 400;
     line-height: 24px;
     color: var(--body-text-color);
-    margin-bottom: 24px;
 }
 
 .corporate-policies-list-item .right-col > div:nth-child(3) a{
@@ -81,7 +80,7 @@
     line-height: 24px;
     color: var(--primary-gold);
     padding: 0;
-    margin: 0;
+    margin: 24px 0 0;
 }
 
 .corporate-policies-cta-right .corporate-policies-list-item .right-col > div:nth-child(3){
@@ -154,12 +153,12 @@
     .corporate-policies-list-item .right-col > div:first-child {
         font-size: var(--font-size-xxs);
         line-height: 20px;
-        margin-bottom: 8px;
     }
 
     .corporate-policies-list-item .right-col > div:nth-child(3) a {
         font-size: var(--font-size-xxs);
         line-height: 20px;
+        margin-top: 8px;
     }
     .corporate-policies-list-item .right-col > div:nth-child(3) a > span:first-child {
         font-size: var(--font-size-xxs);        
